[gd_scene load_steps=5 format=3 uid="uid://cno8y33wvvewj"]

[ext_resource type="Script" path="res://Shooter.gd" id="1_stfqj"]
[ext_resource type="Texture2D" uid="uid://dva0btvaaj4l1" path="res://ASSETS/basic cannon.png" id="2_pbgwi"]
[ext_resource type="AudioStream" uid="uid://b5s7xv047bak7" path="res://ASSETS/sounds/zapsplat_warfare_gun_bullet_whizz_hit_wood_002_92849.mp3" id="3_bpbwh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uou6h"]
radius = 200.0

[node name="Shooter" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_stfqj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 0.263188
shape = SubResource("CircleShape2D_uou6h")

[node name="BasicCannon" type="Sprite2D" parent="."]
position = Vector2(-1, -2)
rotation = 1.57518
texture = ExtResource("2_pbgwi")

[node name="Muzzle" type="Marker2D" parent="BasicCannon"]
unique_name_in_owner = true
position = Vector2(0.894833, -24.0042)

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_bpbwh")

[node name="FireRate_Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="FireRate_Timer" to="." method="_on_firerate_timer_timeout"]
